fixed menu bags

--- a/index.html
+++ b/index.html
@@ -65,16 +65,14 @@
 					<div class="facts__itemImage">
 						<img src="images/player.png" alt="player-icon">
 					</div>
-					<div class="facts__itemNumber">42+
-					</div>
+					<div class="facts__itemNumber">42+</div>
 					<div class="facts__itemText">Voluptatem quia voluptas aspernatur aut odit aut fugit.</div>
 				</div>
 				<div class="facts__item col-11 col-sm-6 col-md-3">
 					<div class="facts__itemImage">
 						<img src="images/donut.png" alt="donut-icon">
 					</div>
-					<div class="facts__itemNumber">73%
-					</div>
+					<div class="facts__itemNumber">73%</div>
 					<div class="facts__itemText">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit.</div>
 				</div>
 				<div class="facts__item col-11 col-sm-6 col-md-3">
