added sections Sneakers and Explore

--- a/index.html
+++ b/index.html
@@ -92,6 +92,47 @@
 			</div>
 		</div>
 	</div>
+	<div class="sneakers__wrapper">
+		<div class="container">
+			<div class="sneakers row">
+				<div class="sneakers__info col-12 col-md-4">
+					<h5 class="sneakers__infoTop">consequatur</h5>
+					<h2 class="sneakers__infoTitle">Quis autem<br>vel eum</h2>
+					<div class="sneakers__infoText">Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus.</div>
+					<button type="button" class="btn btn-outline-light sneakers__infoButton">Read more</button>
+				</div>
+				<div class="sneakers__product col-12 col-md-8">
+					<div class="sneakers__productImage">
+						<a href="#">
+							<img src="images/Bitmap.png">
+						</a>
+					</div>
+					<div class="sneakers__productDesc">
+						<h3 class="sneakers__productDescTitle">Harum<br>quidem</h3>
+						<div class="sneakers__productDescText">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga.</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="explore__wrapper">
+		<div class="explore__block">
+			<div class="circle circle_small"></div>
+			<div class="circle circle_medium"></div>
+			<div class="circle circle_big"></div>
+			<div class="container">
+				<div class="explore row">
+					<div class="explore__text col-11 col-md-6">
+						<div class="explore__textTop">rerum necessitatibus </div>
+						<div class="explore__textMain">Temporibus autem quibusdam</div>
+					</div>
+					<div class="explore__buttonWrapper col-md-6">
+						<button class="explore__button btn btn-outline-light">Explore</button>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
 </body>
 </html>
