added products section

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 				<div class="sneakers__product col-12 col-md-8">
 					<div class="sneakers__productImage">
 						<a href="#">
-							<img src="images/Bitmap.png">
+							<img src="images/Bitmap.png" alt="sneakers">
 						</a>
 					</div>
 					<div class="sneakers__productDesc">
@@ -129,6 +129,75 @@
 					<div class="explore__buttonWrapper col-md-6">
 						<button class="explore__button btn btn-outline-light">Explore</button>
 					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="products__wrapper">
+		<div class="container">
+			<div class="products">
+				<div class="products__text">
+					<h5 class="products__textTop">saepe eveniet</h5>
+					<h2 class="products__textMain">Voluptates repudiandae</h2>
+				</div>
+				<div class="products__content">
+					<div class="products__contentItem">
+						<div class="products__contentItemImage">
+							<a href="">
+								<img src="images/boat.png" alt="boat">
+							</a>
+						</div>
+						<div class="products__contentItemInfo">
+							<div class="products__contentItemInfoIcon">
+								<img src="images/food-icon.png" alt="food-icon">
+							</div>
+							<div class="products__contentItemInfoText">
+								<div class="products__contentItemInfoTextTitle">Consectetur</div>
+								<div class="products__contentItemInfoTextMain">
+									Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis.
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="products__contentItem">
+						<div class="products__contentItemImage">
+							<a href="">
+								<img src="images/cup.png" alt="cup">
+							</a>
+						</div>
+						<div class="products__contentItemInfo">
+							<div class="products__contentItemInfoIcon">
+								<img src="images/planet-icon.png" alt="planet-icon">
+							</div>
+							<div class="products__contentItemInfoText">
+								<div class="products__contentItemInfoTextTitle">Adipiscing</div>
+								<div class="products__contentItemInfoTextMain">
+									Ut enim ad minim veniam, quis nostrud exercitation ullamco.
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="products__contentItem">
+						<div class="products__contentItemImage">
+							<a href="">
+								<img src="images/lamp.png" alt="lamp">
+							</a>
+						</div>
+						<div class="products__contentItemInfo">
+							<div class="products__contentItemInfoIcon">
+								<img src="images/cosmo-icon.png" alt="cosmo-icon">
+							</div>
+							<div class="products__contentItemInfoText">
+								<div class="products__contentItemInfoTextTitle">Eiusmod</div>
+								<div class="products__contentItemInfoTextMain">
+									Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="products__button">
+					<button type="button" class=" btn products__buttonItem btn-outline-light">Load more</button>
 				</div>
 			</div>
 		</div>
