fixed bugs in the sneakers section, added mixin and template selectors to the _variables

--- a/index.html
+++ b/index.html
@@ -101,15 +101,17 @@
 					<div class="sneakers__infoText">Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus.</div>
 					<button type="button" class="btn btn-outline-light sneakers__infoButton">Read more</button>
 				</div>
-				<div class="sneakers__product col-12 col-md-8">
-					<div class="sneakers__productImage">
-						<a href="#">
-							<img src="images/Bitmap.png" alt="sneakers">
-						</a>
-					</div>
-					<div class="sneakers__productDesc">
-						<h3 class="sneakers__productDescTitle">Harum<br>quidem</h3>
-						<div class="sneakers__productDescText">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga.</div>
+				<div class="sneakers__productWrapper col-10 col-md-7 col-xl-8">
+					<div class="sneakers__product">
+						<div class="sneakers__productImage">
+							<a href="#">
+								<img src="images/Bitmap.png" alt="sneakers">
+							</a>
+						</div>
+						<div class="sneakers__productDesc">
+							<h3 class="sneakers__productDescTitle">Harum<br>quidem</h3>
+							<div class="sneakers__productDescText">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga.</div>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -117,9 +119,9 @@
 	</div>
 	<div class="explore__wrapper">
 		<div class="explore__block">
-			<div class="circle circle_small"></div>
-			<div class="circle circle_medium"></div>
-			<div class="circle circle_big"></div>
+			<div class="circle_small"></div>
+			<div class="circle_medium"></div>
+			<div class="circle_big"></div>
 			<div class="container">
 				<div class="explore row">
 					<div class="explore__text col-11 col-md-6">
